exports[`test Change status of choices change 1`] = `
<MultipleChoice
  choices={
    Array [
      Object {
        "id": "option-1",
        "isChecked": false,
        "label": "option 1",
        "value": "option-1",
      },
      Object {
        "id": "option-2",
        "isChecked": false,
        "label": "option 2",
        "value": "option-2",
      },
      Object {
        "id": "option-3",
        "isChecked": false,
        "label": "option 3",
        "value": "option-2",
      },
      Object {
        "id": "option-4",
        "isChecked": false,
        "label": "option 4",
        "value": "option-4",
      },
    ]
  }
  heading="MultipleChoice"
  headingStyle="control-label"
  inputStyle="inline"
  isRequired={false}
  name="choice[]"
  query={Object {}}
  requiredLabel="">
  <div
    className="inline formGroup ">
    <div
      className="controlLabel">
      MultipleChoice
    </div>
    <div
      className="inputContainer">
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-1"
          name="choice[]"
          onChange={[Function]}
          required={false}
          type="checkbox"
          value="option-1" />
        <label
          htmlFor="choice[]option-1">
          option 1
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={false}
          className="formControl"
          id="choice[]option-2"
          name="choice[]"
          onChange={[Function]}
          required={false}
          type="checkbox"
          value="option-2" />
        <label
          htmlFor="choice[]option-2">
          option 2
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={false}
          className="formControl"
          id="choice[]option-3"
          name="choice[]"
          onChange={[Function]}
          required={false}
          type="checkbox"
          value="option-2" />
        <label
          htmlFor="choice[]option-3">
          option 3
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-4"
          name="choice[]"
          onChange={[Function]}
          required={false}
          type="checkbox"
          value="option-4" />
        <label
          htmlFor="choice[]option-4">
          option 4
        </label>
      </div>
    </div>
  </div>
</MultipleChoice>
`;

exports[`test Changes status on choice change 1`] = `
<MultipleChoice
  choices={
    Array [
      Object {
        "id": "option-1",
        "isChecked": false,
        "label": "test",
        "value": "test",
      },
    ]
  }
  heading="Test"
  headingStyle="control-label"
  inputStyle="inline"
  isRequired={true}
  name="choice[]"
  query={Object {}}
  requiredLabel="">
  <div
    className="inline formGroup ">
    <div
      className="controlLabel">
      Test
    </div>
    <div
      className="inputContainer">
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-1"
          name="choice[]"
          onChange={[Function]}
          required={true}
          type="checkbox"
          value="test" />
        <label
          htmlFor="choice[]option-1">
          test
        </label>
      </div>
    </div>
  </div>
</MultipleChoice>
`;

exports[`test Renders choice without crashing 1`] = `
<div
  className="inline formGroup ">
  
  <div
    className="controlLabel">
    Test
  </div>
  <div
    className="inputContainer">
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-1"
        name="choice[]"
        onChange={[Function]}
        required={true}
        type="checkbox"
        value="test" />
      <label
        htmlFor="choice[]option-1">
        test
      </label>
    </div>
  </div>
</div>
`;

exports[`test Renders choices without crashing 1`] = `
<div
  className="inline formGroup ">
  
  <div
    className="controlLabel">
    MultipleChoice
  </div>
  <div
    className="inputContainer">
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-1"
        name="choice[]"
        onChange={[Function]}
        required={false}
        type="checkbox"
        value="option-1" />
      <label
        htmlFor="choice[]option-1">
        option 1
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-2"
        name="choice[]"
        onChange={[Function]}
        required={false}
        type="checkbox"
        value="option-2" />
      <label
        htmlFor="choice[]option-2">
        option 2
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-3"
        name="choice[]"
        onChange={[Function]}
        required={false}
        type="checkbox"
        value="option-2" />
      <label
        htmlFor="choice[]option-3">
        option 3
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-4"
        name="choice[]"
        onChange={[Function]}
        required={false}
        type="checkbox"
        value="option-4" />
      <label
        htmlFor="choice[]option-4">
        option 4
      </label>
    </div>
  </div>
</div>
`;
